[package]
name = "lightfetch"
version = "0.1.0"
edition = "2021"
authors = ["NaokiM03"]
description = "A command-line system information tool for Windows users"
keywords = ["cli", "windows", "system", "command-line", "information"]
repository = "https://github.com/NaokiM03/lightfetch"
license = "MIT"

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"

[dependencies]
num_cpus = "1.13.1"
sysinfo =  { version = "0.23.5", default-features = false }
whoami = "1.2.1"
winit = "0.26.1"
