[package]
name = "lightfetch"
version = "1.0.2"
edition = "2021"
authors = ["NaokiM03"]
description = "A command-line system information tool for Windows users"
keywords = ["cli", "windows", "system", "command-line", "information"]
repository = "https://github.com/NaokiM03/lightfetch"
license = "MIT"

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"

[dependencies]
num_cpus = "1.15.0"
sysinfo =  { version = "0.27.1", default-features = false }
whoami = "1.2.1"
winit = "0.26.1"
wmi = "0.11.0"
tiny-ansi = "0.1.0"
