[package]
name = "lightfetch"
version = "1.0.8"
edition = "2021"
authors = ["NaokiM03"]
description = "A command-line system information tool for Windows users"
keywords = ["cli", "windows", "system", "command-line", "information"]
repository = "https://github.com/NaokiM03/lightfetch"
license = "MIT"

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"

[dependencies]
num_cpus = "1.16.0"
sysinfo =  { version = "0.28.2", default-features = false }
whoami = "1.3.0"
winit = "0.28.2"
wmi = "0.12.0"
tiny-ansi = "0.1.0"

[build-dependencies]
static_vcruntime = "2.0.0"
